# MCP

./: README.md
Lab_Num_1/: CMakeLists.txt  Test.cpp  Test.h  main.cpp  matrix_solution.cpp  matrix_solution.h
Lab_Num_2/src/: Main.java  Matrix.java  MatrixTest.java
Lab_Num_3/: Matrix.cs  UnitTest1.cs  UnitTest_Lab3.sln
